--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>WordCamp San Antonio</title>
   </head>
   <body>
-    <div class="container text-center">
-      <h1 class="display-3">WordCamp San Antonio</h1>
+    <div class="container text-center bg-info text-white mt-5">
+      <h1 class="display-3 pt-5">WordCamp San Antonio</h1>
       <p class="lead">Coming Soon, A One-Day Conference About WordPress</p>
       <div class="col-lg-6 mx-auto">
-        <div class="input-group mb-3">
+        <div class="input-group pt-5 pb-5 mb-3">
           <input type="text" class="form-control" placeholder="Enter your email" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Sign Up</button>
+          <button class="btn btn-light btn-outline-info" type="button" id="button-addon2">Sign Up</button>
           </div>
         </div>
       </div>
