--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <title>WordCamp San Antonio</title>
   </head>
-  <body>
-    <div class="container text-center bg-info text-white mt-5">
+  <body class="bg-info">
+    <div class="container text-center text-white mt-5">
       <h1 class="display-3 pt-5">WordCamp San Antonio</h1>
       <p class="lead">Coming Soon, A One-Day Conference About WordPress</p>
       <div class="col-lg-6 mx-auto">
