Duplicated index.html, completed module

--- a/index.html
+++ b/index.html
@@ -10,20 +10,69 @@
 
     <title>WordCamp San Antonio</title>
   </head>
-  <body class="bg-info">
-    <div class="container text-center text-white mt-5">
-      <h1 class="display-3 pt-5">WordCamp San Antonio</h1>
-      <p class="lead">Coming Soon, A One-Day Conference About WordPress</p>
-      <div class="col-lg-6 mx-auto">
-        <div class="input-group pt-5 pb-5 mb-3">
-          <input type="text" class="form-control" placeholder="Enter your email" aria-label="Recipient's username" aria-describedby="button-addon2">
-          <div class="input-group-append">
-          <button class="btn btn-light btn-outline-info" type="button" id="button-addon2">Sign Up</button>
-          </div>
-        </div>
+
+  <body>
+    <div class="container pt-4">
+  <!-- about -->
+    <div class="row">
+      <div class="col-lg order-lg-2">
+        <h3 class="mb-4">About WordCamp</h3>
+
+        <img class="img-fluid rounded" src="https://via.placeholder.com/1024x436.png" alt="Photo of San Antonio, TX">
+
+        <p>The beautiful city of San Antonio, TX will be the host city for WordCamp!</p>
+        <p>Explore the future of WordPress with a lineup of industry professionals. Discover new techniques to advance your career as a web designer.</p>
+      </div>
+      <div class="col-lg order-lg-1">
+        <h3>Expert Speakers</h3>
+        <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
+        <p>Want to meet the international WordPress community and share skills with some of the world's top experts and makers? Be the first to know what to expect for the future of WordPress.</p>
+        <p>WordCamp is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
+      </div>
+      <div class="col-lg order-lg-3">
+        <h3>What You'll Learn</h3>
+        <ul>
+          <li><strong>WordPress 5</strong>: New Gutenberg editor</li>
+          <li><strong>WooCommerce</strong>: E-commerce platform</li>
+          <li><strong>Hosting</strong>: Managed web hosting</li>
+          <li><strong>Themes</strong>: Creating your theme</li>
+          <li><strong>Plugins</strong>: Develop your plugin</li>
+          <li><strong>Content</strong>: Writing and podcasts</li>
+        </ul>
       </div>
     </div>
+    <!-- /about -->
+    </div>
 
+    <!-- speakers -->
+      <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
+        [Speakers bios go here]
+    <!-- /speakers -->
+
+    <!-- schedule -->
+      <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
+        [Conference schedule goes here]
+    <!-- /schedule -->
+
+    <!-- signup form -->
+    <hr>
+      <div class="row py-4 text-muted">
+        <div class="col-md col-xl-5">
+          <p><strong>About Northwest Vista College</strong></p>
+          <p>Northwest Vista College brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+        </div>
+      <div class="col-md col-xl-5 ml-auto">
+          <p><strong>Stay up-to-date on WordCamp</strong></p>
+        <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="button-addon2">
+        <div class="input-group-append">
+        <button class="btn btn-secondary" type="button" id="button-addon2">Sign up</button>
+        </div>
+        </div>
+      </div>
+      </div>
+  <hr>
+<!-- /signup form -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
