updated photo of city skyline

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="col-lg order-lg-2">
         <h3 class="mb-4">About WordCamp</h3>
 
-        <img class="img-fluid rounded" src="https://via.placeholder.com/1024x436.png" alt="Photo of San Antonio, TX">
+        <img class="img-fluid rounded" src="https://i.ibb.co/nCKVCwX/sanantonioskyline.png" alt="Photo of San Antonio, TX">
 
         <p>The beautiful city of San Antonio, TX will be the host city for WordCamp!</p>
         <p>Explore the future of WordPress with a lineup of industry professionals. Discover new techniques to advance your career as a web designer.</p>
