--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
   </div>
 </nav>
   <!-- /navbar -->
+
+  <div class="jumbotron jumbotron-fluid bg-light">
+  <div class="container text-sm-center pt-5">
+    <h1 class="display-4">WordCamp San Antonio</h1>
+    <p class="lead">A One-day Conference About WordPress</p>
+  </div>
+</div>
+
     <div class="container pt-4">
   <!-- about -->
     <div class="row">
