--- a/index.html
+++ b/index.html
@@ -39,13 +39,19 @@
 </nav>
   <!-- /navbar -->
 
+  <!-- jumbotron -->
   <div class="jumbotron jumbotron-fluid bg-light">
   <div class="container text-sm-center pt-5">
     <h1 class="display-4">WordCamp San Antonio</h1>
     <p class="lead">A One-day Conference About WordPress</p>
+    <div class="mt-5">
+  	<button type="button" class="btn btn-secondary btn-lg">Register Now</button>
+  	<a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
+	</div>
   </div>
 </div>
-
+	<!-- /jumnbotron -->
+	
     <div class="container pt-4">
   <!-- about -->
     <div class="row">
@@ -88,6 +94,9 @@
         [Conference schedule goes here]
     <!-- /schedule -->
 
+    <!-- callout button -->
+<button type="button" class="btn btn-secondary btn-lg d-block mx-auto my-5">Don't Miss Out, Register Now</button>  
+	<!-- /callout button -->
     <!-- signup form -->
     <hr>
       <div class="row py-4 text-muted">
