Updated index.html speaker cards component

--- a/index.html
+++ b/index.html
@@ -85,9 +85,64 @@
     </div>
 
     <!-- speakers -->
-      <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
-        [Speakers bios go here]
-    <!-- /speakers -->
+	<h2 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h2>
+	<div class="row">
+  		<div class="col-md-6 col-lg-4">
+  			<div class="card mb-3">
+  			<img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  			<div class="card-body">
+    		<h4 class="card-title">Speaker Name</h4>
+    		<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  			</div>
+			</div>
+  		</div>
+  		<div class="col-md-6 col-lg-4">
+  			<div class="card mb-3">
+  			<img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  			<div class="card-body">
+    		<h4 class="card-title">Speaker Name</h4>
+    		<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  			</div>
+			</div>
+  		</div>
+  		<div class="col-md-6 col-lg-4">
+  			<div class="card mb-3">
+  			<img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  			<div class="card-body">
+    		<h4 class="card-title">Speaker Name</h4>
+    		<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  			</div>
+			</div>
+  		</div>
+  		<div class="col-md-6 col-lg-4">
+  			<div class="card mb-3">
+  			<img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  			<div class="card-body">
+    		<h4 class="card-title">Speaker Name</h4>
+    		<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  			</div>
+			</div>
+  		</div>
+  		<div class="col-md-6 col-lg-4">
+  			<div class="card mb-3">
+  			<img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  			<div class="card-body">
+    		<h4 class="card-title">Speaker Name</h4>
+    		<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  			</div>
+			</div>
+  		</div>
+  		<div class="col-md-6 col-lg-4">
+  			<div class="card mb-3">
+  			<img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  			<div class="card-body">
+    		<h4 class="card-title">Speaker Name</h4>
+    		<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  			</div>
+			</div>
+  		</div>
+	</div>
+<!-- /speakers -->
 
     <!-- schedule -->
       <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
@@ -116,6 +171,35 @@
       </div>
   <hr>
 <!-- /signup form -->
+
+<!-- footer -->
+  <div class="row py-3">
+    <div class="col-md-7">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Community</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tracks</a>
+        </li>
+        <li class="nav-item">
+          <div class="btn-group dropup">
+  			<button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  		  			Other Confrences
+  			</button>
+  			<div class="dropdown-menu">
+    		<!-- Dropdown menu links -->
+  			</div>
+			</div>
+        </li>
+      </ul>
+    </div>
+    <div class="col-md text-md-right">
+      <small>&copy; 2019 WordCamp &amp; Northwest Vista College</small>
+    </div>
+  </div>
+<!-- /footer -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
