--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>WordCamp San Antonio</title>
   </head>
 
-  <body>
+  <body id="home" data-spy="scroll" data-target=".navbar">
   <!-- navbar -->
   	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
@@ -54,7 +54,7 @@
 	
     <div class="container pt-4">
   <!-- about -->
-    <div class="row">
+    <div class="row" id="about">
       <div class="col-lg order-lg-2">
         <h3 class="mb-4">About WordCamp</h3>
 
@@ -85,7 +85,7 @@
     <!-- /about -->
 
      <!-- speakers -->
-	<h2 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h2>
+	<h2 id="speakers" id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h2>
 	<div class="row">
   		<div class="col-md-6 col-lg-4">
   			<div class="card mb-3">
