Updated modal form, imcomplete

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 	<!-- /jumnbotron -->
 	
-    <div class="container pt-4">
+<div class="container pt-4">
   <!-- about -->
     <div class="row" id="about">
       <div class="col-lg order-lg-2">
@@ -252,7 +252,8 @@
     </div>
   </div>
 <!-- /footer -->
-    </div>
+
+</div>
 
 
 
@@ -267,11 +268,115 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+          <strong>Hurry!</strong> Early bird registration ends in two days.
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <form>
+          <div class="form-row">
+           <div class="form-group col">
+           <h5 class="mb-1">Basic Info</h5>
+           <label for="inputName">Name:</label>
+           <input type="text" class="form-control" id="inputName" placeholder=" ">
+           </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" id="inputEmail" placeholder=" ">
+          </div>
+          </div>
+        
+         <div class="form-group">
+          <label for="inputJobRole">Job Role</label>
+          <select class="form-control custom-select" id="inputJobRole">
+            <option>WordPress Developer</option>
+            <option>Web Designer</option>
+            <option>Blogger</option>
+            <option>Student</option>
+          </select>
+         </div>
+
+        <div class="form-group">
+          <label for="inputInterest"><h5 class="mb-1">Which Topics Interest You Most?</h5></label>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+            WordPress Plugins
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+            PHP
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+            CSS and Javascipt
+            </label>
+          </div>
+        </div>
+
+  <div class="form-row">
+  <h5 class="mb-1">Payment Info</h5>
+  </div>
+    <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputPayment">Card Number:</label>
+      <input type="text" class="form-control" id="Payment">
+    </div>
+    <div class="form-group col-md-3">
+      <label for="inputZip">Zip:</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+    <div class="form-group col-md-3">
+      <label for="inputCVV">CVV:</label>
+      <input type="text" class="form-control" id="inputCVV">
+    </div>
+  </div>
+
+  <div class="form-row">
+    <label for="inputExpMonth">Expirations Date:</label>
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-7">
+        <select class="form-control custom-select" id="inputExpMonth">
+          <option>01 - January</option>
+          <option>02 - February</option>
+          <option>03 - March</option>
+          <option>04 - April</option>
+          <option>05 - May</option>
+          <option>06 - June</option>
+          <option>07 - July</option>
+          <option>08 - August</option>
+          <option>09 - September</option>
+          <option>10 - October</option>
+          <option>11 - November</option>
+          <option>12 - December</option>
+        </select>
+    </div>
+    <div class="form-group col-md-5">
+        <select class="form-control custom-select" id="inputExpYear">
+          <option>2019</option>
+          <option>2020</option>
+          <option>2021</option>
+          <option>2022</option>
+          <option>2023</option>
+          <option>2024</option>
+          <option>2025</option>
+          <option>2026</option>
+        </select>
+    </div>
+  </div>
+</form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-dark">Register</button>
       </div>
     </div>
   </div>
