--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Register for WordCamp Conference</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Register for WordCamp</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -298,7 +298,7 @@
             <option>Student</option>
           </select>
          </div>
-
+         <hr>
         <div class="form-group">
           <label for="inputInterest"><h5 class="mb-1">Which Topics Interest You Most?</h5></label>
           <div class="form-check">
@@ -320,7 +320,7 @@
             </label>
           </div>
         </div>
-
+        <hr>
   <div class="form-row">
   <h5 class="mb-1">Payment Info</h5>
   </div>
@@ -330,7 +330,7 @@
       <input type="text" class="form-control" id="Payment">
     </div>
     <div class="form-group col-md-3">
-      <label for="inputZip">Zip:</label>
+      <label for="inputZip">Zip Code:</label>
       <input type="text" class="form-control" id="inputZip">
     </div>
     <div class="form-group col-md-3">
@@ -342,7 +342,7 @@
   <div class="form-row">
     <label for="inputExpMonth">Expirations Date:</label>
   </div>
-  
+
   <div class="form-row">
     <div class="form-group col-md-7">
         <select class="form-control custom-select" id="inputExpMonth">
@@ -373,11 +373,13 @@
         </select>
     </div>
   </div>
+  <hr>
+  <div class="form-group">
+        <button type="submit" class="btn btn-dark">Register</button>
+      </div>
 </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-dark">Register</button>
-      </div>
+      
     </div>
   </div>
 </div>
