--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="jumbotron jumbotron-fluid bg-light">
   <div class="container text-sm-center pt-5">
     <h1 class="display-4">WordCamp San Antonio</h1>
-    <p class="lead">A One-day Conference About WordPress</p>
+    <p class="lead">A One-Day Conference About WordPress</p>
     <div class="mt-5">
   	<button type="button" class="btn btn-secondary btn-lg" data-toggle="modal" data-target="#register">Register Now</button>
   	<a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
