--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <title>WordCamp San Antonio</title>
   </head>
@@ -60,7 +60,7 @@
       <div class="col-lg order-lg-2" id="about-section">
         <h3 class="mb-4">About WordCamp</h3>
 
-        <img class="img-fluid rounded" src="https://i.ibb.co/nCKVCwX/sanantonioskyline.png" alt="Photo of San Antonio, TX">
+        <img class="img-fluid rounded" src="img/sanantonioskyline.png" alt="Photo of San Antonio, TX">
 
         <p>The beautiful city of San Antonio, TX will be the host city for WordCamp!</p>
         <p>Explore the future of WordPress with a lineup of industry professionals. Discover new techniques to advance your career as a web designer.</p>
