--- a/index.html
+++ b/index.html
@@ -8,54 +8,58 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <title>WordCamp San Antonio</title>
+
   </head>
 
-  <body class="bg-dark" id="home" data-spy="scroll" data-target=".navbar">
+  <body id="home" data-spy="scroll" data-target=".navbar">
   <!-- navbar -->
-  	<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top transparent">
-  <div class="container">
-    <a class="navbar-brand order-1 mr-0" href="#" target="_blank" id="presented-by">Presented by NVC</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#speakers">Speakers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#schedule">Schedule</a>
-        </li>
+  	<nav class="navbar navbar-expand-lg fixed-top transparent">
+      <div class="container">
+        <a class="nav-link order-1 mr-0" href="#" target="_blank" id="presented-by">Presented by NVC</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#speakers">Speakers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#schedule">Schedule</a>
+          </li>
+        </ul>
       </div>
-    </div>
-  </div>
-</nav>
+      </div>
+      </div>
+    </nav>
   <!-- /navbar -->
 
   <!-- jumbotron -->
-  <div class="jumbotron jumbotron-fluid bg-light">
-  <div class="container text-sm-center pt-5">
-    <h1>WordCamp San Antonio</h1>
-    <p class="lead">A One-Day Conference About WordPress</p>
-    <div class="mt-5">
-  	<button type="button" class="btn btn-secondary btn-lg" data-toggle="modal" data-target="#register" id="button-style">Register Now</button>
-  	<a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
-	</div>
-  </div>
-</div>
+  <section class="jumbotron jumbotron-fluid">
+    <div class="container text-sm-center">
+      <h1>WordCamp San Antonio</h1>
+      <p class="lead">A One-Day Conference About WordPress</p>
+      <div class="mt-5">
+  	 <button type="button" class="btn btn-lg" data-toggle="modal" data-target="#register" id="button-style">Register Now</button>
+  	 <a class="btn btn-lg" href="#speakers">See Speakers</a>
+    </div>
+    </div>
+  </section>
 	<!-- /jumbotron -->
 	
-<div class="container pt-4 bg-dark">
-  <!-- about -->
+<div class="container pt-4">
+<!-- about -->
     <div class="row" id="about">
       <div class="col-lg order-lg-2" id="about-section">
         <h3 class="mb-4">About WordCamp</h3>
@@ -74,20 +78,20 @@
       <div class="col-lg order-lg-3" id="learn">
         <h3>What You'll Learn</h3>
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark"><strong>WordPress 5</strong>: New Gutenberg editor</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark"><strong>WooCommerce</strong>: E-commerce platform</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark"><strong>Hosting</strong>: Managed web hosting</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark"><strong>Themes</strong>: Creating your theme</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark"><strong>Plugins</strong>: Develop your plugin</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-dark"><strong>Content</strong>: Writing and podcasts</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"><strong>WordPress 5</strong>: New Gutenberg editor</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"><strong>WooCommerce</strong>: E-commerce platform</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"><strong>Hosting</strong>: Managed web hosting</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"><strong>Themes</strong>: Creating your theme</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"><strong>Plugins</strong>: Develop your plugin</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-secondary"><strong>Content</strong>: Writing and podcasts</a>
         </div>
 
       </div>
     </div>
-    <!-- /about -->
+<!-- /about -->
 
-     <!-- speakers -->
-	<h2 id="speakers" class="display-4 text-center my-5">Speakers</h2>
+<!-- speakers -->
+	<h2 id="speakers" class="text-center my-5">Speakers</h2>
 	<div class="row">
   		<div class="col-md-6 col-lg-4">
   			<div class="card mb-3">
@@ -148,63 +152,65 @@
 <!-- /speakers -->
 
 <!-- schedule -->
-<h2 id="schedule" class="display-4 text-center my-5">Schedule</h2>
-<ul class="list-group">
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
-      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
-    </div>
-    <p class="mb-1">Chris Traeger</p>
-  </li>
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">WooCommerce Basics</h5>
-      <span class="badge badge-pill badge-secondary p-2">10:00am</span>
-    </div>
-    <p class="mb-1">Ron Swanson</p>
-  </li>
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">WPEngine & Flywheel</h5>
-      <span class="badge badge-pill badge-secondary p-2">11:00am</span>
-    </div>
-    <p class="mb-1">Leslie Knope</p>
-  </li>
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Lunch</h5>
-      <span class="badge badge-pill badge-secondary p-2">12:00pm</span>
-    </div>
-    <p class="mb-1">Lunch catered by JJ's Diner!</p>
-  </li>
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Creating your Theme</h5>
-      <span class="badge badge-pill badge-secondary p-2">1:00pm</span>
-    </div>
-    <p class="mb-1">April Ludgate</p>
-  </li>
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Developing a Plugin</h5>
-      <span class="badge badge-pill badge-secondary p-2">2:00pm</span>
-    </div>
-    <p class="mb-1">Ben Wyatt</p>
-  </li>
-  <li class="list-group-item list-group-item-dark">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Creating great Content and Podcasts</h5>
-      <span class="badge badge-pill badge-secondary p-2">3:00pm</span>
-    </div>
-    <p class="mb-1">Andy Dwyer</p>
-  </li>
-</ul>
+<h2 id="schedule" class="text-center my-5">Schedule</h2>
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+        <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+      </div>
+       <p class="mb-1">Chris Traeger</p>
+    </li>
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">WooCommerce Basics</h5>
+        <span class="badge badge-pill badge-secondary p-2">10:00am</span>
+      </div>
+        <p class="mb-1">Ron Swanson</p>
+    </li>
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">WPEngine & Flywheel</h5>
+        <span class="badge badge-pill badge-secondary p-2">11:00am</span>
+      </div>
+        <p class="mb-1">Leslie Knope</p>
+    </li>
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">Lunch</h5>
+        <span class="badge badge-pill badge-secondary p-2">12:00pm</span>
+      </div>
+        <p class="mb-1">Lunch catered by JJ's Diner!</p>
+    </li>
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">Creating your Theme</h5>
+        <span class="badge badge-pill badge-secondary p-2">1:00pm</span>
+      </div>
+      <p class="mb-1">April Ludgate</p>
+    </li>
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">Developing a Plugin</h5>
+        <span class="badge badge-pill badge-secondary p-2">2:00pm</span>
+      </div>
+        <p class="mb-1">Ben Wyatt</p>
+    </li>
+    <li class="list-group-item list-group-item-secondary">
+      <div class="d-flex justify-content-between">
+        <h5 class="mb-1">Creating great Content and Podcasts</h5>
+        <span class="badge badge-pill  btn-secondary  p-2">3:00pm</span>
+      </div>
+        <p class="mb-1">Andy Dwyer</p>
+    </li>
+  </ul>
 <!-- /schedule -->
 
-    <!-- callout button -->
-<button type="button" class="btn btn-secondary btn-lg d-block mx-auto my-5" data-toggle="modal" data-target="#register">Don't Miss Out, Register Now</button>  
-	<!-- /callout button -->
+
+
+<!-- callout button -->
+  <button type="button" class="btn btn-secondary btn-lg d-block mx-auto my-5" data-toggle="modal" data-target="#register">Don't Miss Out, Register Now</button>  
+<!-- /callout button -->
     
 
 
